fixed scroll for dropdown on mobile

--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -94,6 +94,7 @@
     @include textTypohraphy(20, 1.3, 400);
     color: $color-white;
     transition: color $duration-transition;
+    word-break: break-word;
     cursor: pointer;
 
     &:hover {
